# LifeGame-interview-problem

./: .travis.yml  Interview-Problems.md  ProblemsByMe.md  README.md
Etc/: ProblemsByMe.md
Header/: map.h  unit.h
Scripts/: build.sh  travis_test.sh
Source/: unit.cc
Test/: CMakeLists.txt  map_test.cc  unit_test.cc
problems/03. implements-life-game/: README.md
problems/03. implements-life-game/implements/cpp/: build  run
problems/03. implements-life-game/implements/cpp/Case/: origin.case
problems/03. implements-life-game/implements/cpp/Header/: map.h
problems/03. implements-life-game/implements/cpp/Scripts/: travis_test.sh
problems/03. implements-life-game/implements/cpp/Test/: CMakeLists.txt
problems/03. implements-life-game/implements/cpp/headers/: lifegame.h  lifegame.hpp  map.h  map.hpp  unit.h  unit.hpp
problems/03. implements-life-game/implements/cpp/sources/: lifegame.cc  main.cc  map.cc  solve.cc  unit.cc
